# IoT_server

./: LICENSE  README.MD  docker-compose.yml
client/: CMakeLists.txt  Dockerfile  client.c  client.h  common.c  common.h  log.h  main.c  sensor.c  sensor.h
client/src/: CMakeLists.txt  client.c  client.h  common.c  main.c
server/: CMakeLists.txt  Dockerfile  common.c  common.h  control.c  control.h  log.c  logger.c  logger.h  main.c  server.c  server.h  tpool.c  tpool.h
server/rust/control/src/: sensor.rs
server/src/: CMakeLists.txt  common.c  common.h  control.c  control.h  main.c  server.c  server.h  tpool.c
server/tests/: CMakeLists.txt  test_common.c  test_main.c
